src/parser_bump/snapshots/simp__parser_bump__tests__tests__inputs__valid__expr_after_stmt_fn.snap
---
source: src/parser_bump/tests.rs
expression: parse(&input)
---
StmtFn {
    name: IdentId {
        raw: 1,
    },
    params: [],
    body: Block {
        body: [],
        tail: None,
    },
}
ExprInt {
    value: 0,
}
