src/parser_bump/snapshots/simp__parser_bump__tests__tests__inputs__valid__expr_block.snap
---
source: src/parser_bump/tests.rs
expression: parse(&input)
---
ExprBlock {
    inner: Block {
        body: [],
        tail: None,
    },
}
ExprBlock {
    inner: Block {
        body: [],
        tail: Some(
            ExprInt {
                value: 0,
            },
        ),
    },
}
ExprBlock {
    inner: Block {
        body: [
            ExprInt {
                value: 0,
            },
        ],
        tail: Some(
            ExprInt {
                value: 1,
            },
        ),
    },
}
ExprBlock {
    inner: Block {
        body: [],
        tail: Some(
            ExprBlock {
                inner: Block {
                    body: [],
                    tail: None,
                },
            },
        ),
    },
}
ExprBlock {
    inner: Block {
        body: [
            ExprBlock {
                inner: Block {
                    body: [],
                    tail: None,
                },
            },
        ],
        tail: Some(
            ExprBlock {
                inner: Block {
                    body: [],
                    tail: None,
                },
            },
        ),
    },
}
ExprBlock {
    inner: Block {
        body: [],
        tail: Some(
            ExprBlock {
                inner: Block {
                    body: [],
                    tail: Some(
                        ExprInt {
                            value: 0,
                        },
                    ),
                },
            },
        ),
    },
}
ExprBlock {
    inner: Block {
        body: [
            ExprBlock {
                inner: Block {
                    body: [],
                    tail: Some(
                        ExprInt {
                            value: 0,
                        },
                    ),
                },
            },
        ],
        tail: Some(
            ExprBlock {
                inner: Block {
                    body: [],
                    tail: Some(
                        ExprInt {
                            value: 1,
                        },
                    ),
                },
            },
        ),
    },
}
ExprBlock {
    inner: Block {
        body: [],
        tail: Some(
            ExprBlock {
                inner: Block {
                    body: [
                        ExprInt {
                            value: 0,
                        },
                    ],
                    tail: Some(
                        ExprInt {
                            value: 1,
                        },
                    ),
                },
            },
        ),
    },
}
ExprBlock {
    inner: Block {
        body: [
            ExprBlock {
                inner: Block {
                    body: [
                        ExprInt {
                            value: 0,
                        },
                    ],
                    tail: Some(
                        ExprInt {
                            value: 1,
                        },
                    ),
                },
            },
        ],
        tail: Some(
            ExprBlock {
                inner: Block {
                    body: [
                        ExprInt {
                            value: 1,
                        },
                    ],
                    tail: Some(
                        ExprInt {
                            value: 2,
                        },
                    ),
                },
            },
        ),
    },
}
