src/parser_bump/snapshots/simp__parser_bump__tests__tests__inputs__valid__expr_block_with_semi.snap
---
source: src/parser_bump/tests.rs
expression: parse(&input)
---
ExprBlock {
    inner: Block {
        body: [],
        tail: None,
    },
}
ExprBlock {
    inner: Block {
        body: [],
        tail: None,
    },
}
