src/parser_bump/snapshots/simp__parser_bump__tests__tests__inputs__valid__expr_group.snap
---
source: src/parser_bump/tests.rs
expression: parse(&input)
---
ExprInt {
    value: 0,
}
ExprCall {
    callee: ExprIdent {
        name: IdentId {
            raw: 1,
        },
    },
    args: [],
}
