src/parser_bump/snapshots/simp__parser_bump__tests__tests__inputs__valid__expr_int.snap
---
source: src/parser_bump/tests.rs
expression: parse(&input)
---
ExprInt {
    value: 0,
}
ExprInt {
    value: 1234,
}
